WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268728
Have MediaDescription use String instead of AtomString
https://bugs.webkit.org/show_bug.cgi?id=268728
Summary
Have MediaDescription use String instead of AtomString
Jean-Yves Avenard [:jya]
Reported
2024-02-04 22:40:40 PST
A required step for
bug 266075
Following
bug 266075
, the MediaSourcePrivateRemote/SourceBufferPrivateRemote run in a different thread to MediaSource/SourceBuffer and as such the MediaDescription object passed between those two threads isn't usable with AtomString.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-04 22:41:12 PST
<
rdar://problem/122292724
>
Jean-Yves Avenard [:jya]
Comment 2
2024-02-05 02:01:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23849
EWS
Comment 3
2024-02-06 16:01:31 PST
Committed
274178@main
(8904da90987b): <
https://commits.webkit.org/274178@main
> Reviewed commits have been landed. Closing PR #23849 and removing active labels.
Jonathan Bedard
Comment 4
2024-02-07 10:22:29 PST
Broke TestWebKitAPI.WebKit.MSEHasMediaStreamingActivity and TestWebKitAPI.WebKit.MSEIsPlayingAudio in EWS, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=268924
Jean-Yves Avenard [:jya]
Comment 5
2024-02-07 15:11:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24042
EWS
Comment 6
2024-02-08 01:48:54 PST
Committed
274276@main
(b4428489b41e): <
https://commits.webkit.org/274276@main
> Reviewed commits have been landed. Closing PR #24042 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug