Have MediaDescription stop using AtomString https://bugs.webkit.org/show_bug.cgi?id=268728 rdar://122292724

Reviewed by Youenn Fablet.

Sub-task of 265982.

To be used in WorkQueues, MediaDescription needs to stop using AtomString.
Instead we make this object use ThreadSafeRefCount, and return a StringView
which explicitly enforce that you can't extend the lifetime of the string
outside the lifetime of the MediaDescription container.

No change in observable behaviour.

* Source/WebCore/Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::sourceBufferPrivateDidReceiveInitializationSegment):
(WebCore::SourceBuffer::validateInitializationSegment):
* Source/WebCore/platform/MediaDescription.h:
* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferParserAVFObjC.mm:
* Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.cpp:
* Source/WebCore/platform/graphics/gstreamer/mse/GStreamerMediaDescription.cpp:
(WebCore::GStreamerMediaDescription::codec const):
(WebCore::GStreamerMediaDescription::extractCodecName const):
(WebCore::GStreamerMediaDescription::extractCodecName): Deleted.
* Source/WebCore/platform/graphics/gstreamer/mse/GStreamerMediaDescription.h:
(WebCore::GStreamerMediaDescription::GStreamerMediaDescription):
* Source/WebCore/platform/mock/mediasource/MockBox.h:
* Source/WebCore/platform/mock/mediasource/MockSourceBufferPrivate.cpp:
* Source/WebKit/GPUProcess/media/MediaDescriptionInfo.h:
(WebKit::MediaDescriptionInfo::MediaDescriptionInfo):
* Source/WebKit/GPUProcess/media/MediaDescriptionInfo.serialization.in:
* Source/WebKit/GPUProcess/media/RemoteMediaDescription.h:
(WebKit::RemoteMediaDescription::RemoteMediaDescription):

Canonical link: https://commits.webkit.org/274178@main